--- a/node-http/public/aboutus.html
+++ b/node-http/public/aboutus.html
@@ -1,5 +1,5 @@
 <html>
-   <title>This is about.html</html>
+   <title>This is about.html</title>
      <body>
        <h1>Aboutus.html</h1>
        <p>This is the contents of aboutus.html file</p>
