--- a/node-http/public/index.html
+++ b/node-http/public/index.html
@@ -1,5 +1,5 @@
 <html>
-   <title>This is index.html</html>
+   <title>This is index.html</title>
      <body>
        <h1>Index.html</h1>
        <p>This is the contents of this file</p>
